--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 
 <div class="header">
-  <h1>{{ .Title }}</h1>
+  <h1>{{ .Title | markdownify }}</h1>
   <h2>{{ .Description }}</h2>
 </div>
 <div class="content">
