--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ partial "header.html" . }}
 
 <div class="header">
-  <h1>{{ .Title }}</h1>
+  <h1>{{ .Title | markdownify }}</h1>
   <h2>{{ .Site.Params.subtitle }}</h2>
 </div>
 
